--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="google-site-verification" content="s51h4NwaprtSLQFYDKIqVmA0zoBXaS31oaZgbk3Czik" />
-	<title>K3S NEWS</title>
+	<title>staging k3s io</title>
 	<link rel="canonical" href="https://beta.enewhope.org" />
 <meta name='robots' content='max-image-preview:large' />
 <meta name="viewport" content="width=device-width, initial-scale=1"><link href='https://fonts.gstatic.com' crossorigin rel='preconnect' />
